crates/sql-orm/tests/ui/entity_foreign_key_empty_segment.stderr
error: foreign_key no permite segmentos vacíos
  --> tests/ui/entity_foreign_key_empty_segment.rs:10:25
   |
10 |     #[orm(foreign_key = "crm..id")]
   |                         ^^^^^^^^^
